bk_ida/gobmkida/c0/location_to_string
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/location_to_string/src/engine/printutils.c:740:7: error: use of undeclared identifier 'location_to_string_init'; did you mean 'location_to_string'?
if ( !location_to_string_init ) 
      ^~~~~~~~~~~~~~~~~~~~~~~
      location_to_string
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/location_to_string/src/engine/printutils.c:736:14: note: 'location_to_string' declared here
const char * location_to_string( int pos) 
             ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/location_to_string/src/engine/printutils.c:743:29: error: use of undeclared identifier 'location_to_string_buf'
location_to_buffer( pos_0, &location_to_string_buf[5 * pos_0]); 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/location_to_string/src/engine/printutils.c:744:1: error: use of undeclared identifier 'location_to_string_init'
location_to_string_init = 1; 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/location_to_string/src/engine/printutils.c:753:9: error: use of undeclared identifier 'location_to_string_buf'
return &location_to_string_buf[5 * pos]; 
        ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/location_to_string/src/obj/1/printutils.o] Error 1
